# QT-QML-PROJECTS

./: .gitignore  PRACTICA GL.txt  README.md
Agenda/: CMakeLists.txt  Calendario.qml  CampoInput.qml  main.qml  qml.qrc
Calendario/: Calendario.pro  Calendario.pro.user.3e21dc0  calendario.cpp  calendario.h  calendario.ui  diacalendario.cpp  diacalendario.h  dialogoagregarevento.cpp  dialogoagregarevento.h  dialogoagregarevento.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
CargaPlantillasQML/: CMakeLists.txt  CMakeLists.txt.user.c1d4860  Campo.qml  main.cpp  main.qml  qml.qrc  templatemanager.cpp  templatemanager.h
Carga_Contratos_QML/: CMakeLists.txt  CMakeLists.txt.user.49884cc  CMakeLists.txt.user.c1d4860  Campo.qml  main.cpp  main.qml  plantilla.cont.cont  templatehandler.cpp  templatehandler.h  templatehandlerinterface.cpp  templatehandlerinterface.h
Carga_Contratos_QML/TestTemplateHandler/TestHandler/: CMakeLists.txt  TestTemplateHandler.cpp
ECGSender/: CMakeLists.txt  archivemanager.cpp  archivemanagerinterface.cpp
ECGSerialPort/: Button.qml  CMakeLists.txt  ECG.txt  archivemanager.h  archivemanagerinterface.h  main.cpp  main.qml
ECGSerialReceiver/: CMakeLists.txt  archivemanagerreceiver.cpp  archivemanagerreceiver.h  archivemanagerreceiverinterface.cpp  archivemanagerreceiverinterface.h  main.cpp  main.qml
ECGSerialReceiverOpenGLWidget/: CMakeLists.txt  archivemanagerreceiver.cpp  archivemanagerreceiver.h  graficador.cpp  graficador.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
EjemploStackView/: CMakeLists.txt  main.qml
EjemploTesting/: CMakeLists.txt  TestQString.cpp
EjercicioTextoALAIzq/: mainwindow.cpp  mainwindow.h  mainwindow.ui
FirstProject/: mainwindow.cpp  mainwindow.h  mainwindow.ui
HTML/: CMakeLists.txt  main.qml
HelloQML/: Button.qml  CMakeLists.txt  boton.qml  main.qml
IntegradorQML/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp  main.qml  manejador.cpp  manejador.h  manejadorinterface.cpp  manejadorinterface.h
IntegradorWidgets/: CMakeLists.txt  buttonsignal.cpp  buttonsignal.h  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manejador.cpp  manejador.h
JuegoTenis/: CMakeLists.txt  Contador.qml  Raqueta.qml  main.qml  qml.qrc
Memario/: CMakeLists.txt  cargadorimagenes.cpp  cargadorimagenes.h  claseprueba.cpp  claseprueba.h  main.cpp  main.qml
MultiplataformaProject/: MultiplataformaProject.pro  graficador.cpp  graficador.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  systeminfo.cpp  systeminfo.h  systeminfolinux.cpp  systeminfolinux.h  systeminfowindows.cpp  systeminfowindows.h  thread.cpp  thread.h
Paint/: CMakeLists.txt  filehandler.cpp  filehandler.h  main.cpp  main.qml
PiramideGL/: CMakeLists.txt  CMakeLists.txt.user.c1d4860  graphics.cpp  graphics.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
PlataformaVentas/: Button.qml  CMakeLists.txt  Campo.qml  main.qml  qml.qrc
SQL/: CMakeLists.txt  CMakeLists.txt.user.49884cc  main.qml
SeleccionadorColor/: CMakeLists.txt  CMakeLists.txt.user.3e21dc0  Celda.qml  main.qml  qml.qrc
Semaforo/: CMakeLists.txt  main.qml
SerialPort1/: CMakeLists.txt  CMakeLists.txt.user.49884cc  main.cpp  main.qml  qml.qrc  serialcommunicator.cpp  serialcommunicator.h
SignalCanvas/: CMakeLists.txt  CMakeLists.txt.user.c1d4860  main.cpp  main.qml  readerhandler.cpp  readerhandler.h  signal.txt
SignalGen/: SignalGenerator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
SignalsYSlots/: SignalsYSlots.pro.user.b95a18c  mainwindow.cpp  mainwindow.h  mainwindow.ui
TemplateFiller/: TemplateFiller.pro  campo.cpp  campo.h  listacampos.cpp  listacampos.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ThreadProject/: ThreadProject.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
